# Smart-Orchestra-VST

./: Cargo.toml  README.md  build.gradle  build_installer.bat  settings.gradle
installer/: SmartOrchestraVST.iss
scripts/: build_installer.ps1
src/: engine.rs  lib.rs
