[package]
name = "smart_orchestra_vst"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Audio Labs"]
license = "MIT"

[lib]
name = "SmartOrchestraVST"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "SmartOrchestraTestHost"
path = "src/bin/SmartOrchestraTestHost.rs"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
anyhow = "1"
midly = "0.5"
hound = "3.5"
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
